# Requiem_3Tweaks_DLLTweaksforVR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: AddCXXFiles.cmake  Packaging.cmake  XSEPlugin.cmake
data/MCM/Config/DLLTweaksVR/: config.json  settings.ini
data/SKSE/Plugins/: DLLTweaksVR.ini
data/Scripts/: DLLTweaksVRMCM.pex
data/Scripts/Source/: DLLTweaksVRMCM.psc
include/: Hooks.h  PCH.h  Papyrus.h  Settings.h
src/: Hooks.cpp  Papyrus.cpp  Settings.cpp  XSEPlugin.cpp
